- added DSharp.Core package

--- a/Packages/Delphi2010/DSharp.Core.dproj
+++ b/Packages/Delphi2010/DSharp.Core.dproj
@@ -1,7 +1,7 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
-			<ProjectGuid>{42AA9CF6-ECBC-4A29-903B-9C21946929EF}</ProjectGuid>
-			<MainSource>DataBindings.dpk</MainSource>
+			<ProjectGuid>{D8908EA6-5C62-463E-8F92-CC1741A9AC29}</ProjectGuid>
+			<MainSource>DSharp.Core.dpk</MainSource>
 			<ProjectVersion>12.3</ProjectVersion>
 			<Base>True</Base>
 			<Config Condition="'$(Config)'==''">Debug</Config>
@@ -24,14 +24,16 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DllSuffix>150</DllSuffix>
-			<DCC_Description>DSharp data binding runtime package</DCC_Description>
-			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
+			<DesignOnlyPackage>false</DesignOnlyPackage>
+			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\DSharp.Core.Delphi2010.bpl</DCC_DependencyCheckOutputName>
+			<DllSuffix>.Delphi2010</DllSuffix>
 			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
+			<DCC_Description>DSharp Core Library</DCC_Description>
 			<GenPackage>true</GenPackage>
+			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
 			<GenDll>true</GenDll>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
-			<DCC_DcuOutput>..\..\Library\DelphiXE</DCC_DcuOutput>
+			<DCC_DcuOutput>..\..\Library\Delphi2010</DCC_DcuOutput>
 			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
 			<DCC_ExeOutput>.\$(Config)\$(Platform)</DCC_ExeOutput>
 		</PropertyGroup>
@@ -47,33 +49,49 @@
 			<DCC_DebugInformation>false</DCC_DebugInformation>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="DataBindings.dpk">
+			<DelphiCompile Include="DSharp.Core.dpk">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="rtl.dcp"/>
 			<DCCReference Include="vcl.dcp"/>
-			<DCCReference Include="xmlrtl.dcp"/>
-			<DCCReference Include="DSharp.Core.dcp"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.XNode.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Fibers.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Threading.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Yield.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.CopyOperator.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.Default.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.Default.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lambda.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.Console.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyPath.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Reflection.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Threading.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
+			<BuildConfiguration Include="Base">
+				<Key>Base</Key>
+			</BuildConfiguration>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
-			</BuildConfiguration>
-			<BuildConfiguration Include="Base">
-				<Key>Base</Key>
 			</BuildConfiguration>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_1</Key>
 				<CfgParent>Base</CfgParent>
 			</BuildConfiguration>
 		</ItemGroup>
-		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
-		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+		<Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
 		<ProjectExtensions>
 			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
 			<Borland.ProjectType>Package</Borland.ProjectType>
@@ -108,8 +126,13 @@
 					</VersionInfoKeys>
 					<Excluded_Packages/>
 					<Source>
-						<Source Name="MainSource">DataBindings.dpk</Source>
+						<Source Name="MainSource">DSharp.Core.dpk</Source>
 					</Source>
+					<Parameters>
+						<Parameters Name="UseLauncher">False</Parameters>
+						<Parameters Name="LoadAllSymbols">True</Parameters>
+						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
+					</Parameters>
 				</Delphi.Personality>
 				<Platforms>
 					<Platform value="Win32">True</Platform>
