--- a/Packages/DelphiXE/DSharp.Core.dproj
+++ b/Packages/DelphiXE/DSharp.Core.dproj
@@ -1,7 +1,7 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
-			<ProjectGuid>{42AA9CF6-ECBC-4A29-903B-9C21946929EF}</ProjectGuid>
-			<MainSource>DataBindings.dpk</MainSource>
+			<ProjectGuid>{D8908EA6-5C62-463E-8F92-CC1741A9AC29}</ProjectGuid>
+			<MainSource>DSharp.Core.dpk</MainSource>
 			<ProjectVersion>12.3</ProjectVersion>
 			<Base>True</Base>
 			<Config Condition="'$(Config)'==''">Debug</Config>
@@ -24,11 +24,11 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DllSuffix>150</DllSuffix>
-			<DCC_Description>DSharp data binding runtime package</DCC_Description>
-			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
+			<DllSuffix>.DelphiXE</DllSuffix>
 			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
+			<DCC_Description>DSharp Core Library</DCC_Description>
 			<GenPackage>true</GenPackage>
+			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
 			<GenDll>true</GenDll>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_DcuOutput>..\..\Library\DelphiXE</DCC_DcuOutput>
@@ -47,19 +47,36 @@
 			<DCC_DebugInformation>false</DCC_DebugInformation>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="DataBindings.dpk">
+			<DelphiCompile Include="DSharp.Core.dpk">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="rtl.dcp"/>
 			<DCCReference Include="vcl.dcp"/>
-			<DCCReference Include="xmlrtl.dcp"/>
-			<DCCReference Include="DSharp.Core.dcp"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
-			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.XNode.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Fibers.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Threading.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.Yield.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.CopyOperator.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.Default.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.Default.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lambda.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.Console.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyPath.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Reflection.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Threading.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
@@ -106,9 +123,16 @@
 						<VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments"/>
 					</VersionInfoKeys>
-					<Excluded_Packages/>
+					<Excluded_Packages>
+						<Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\8.0\Bpl\dclDataBindings.bpl">File C:\Users\Public\Documents\RAD Studio\8.0\Bpl\dclDataBindings.bpl not found</Excluded_Packages>
+						<Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\8.0\Bpl\dclTreeViewPresenter.bpl">File C:\Users\Public\Documents\RAD Studio\8.0\Bpl\dclTreeViewPresenter.bpl not found</Excluded_Packages>
+						<Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\8.0\Bpl\DotNet4Delphi_XE_dsgn.bpl">DotNet4Delphi (design)</Excluded_Packages>
+						<Excluded_Packages Name="$(BDSBIN)\dclIntraweb_110_150.bpl">VCL for the Web 11.0 Design Package for Embarcadero RAD Studio XE</Excluded_Packages>
+						<Excluded_Packages Name="$(BDSBIN)\dcloffice2k150.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+						<Excluded_Packages Name="$(BDSBIN)\dclofficexp150.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+					</Excluded_Packages>
 					<Source>
-						<Source Name="MainSource">DataBindings.dpk</Source>
+						<Source Name="MainSource">DSharp.Core.dpk</Source>
 					</Source>
 				</Delphi.Personality>
 				<Platforms>
