- added CollectionView units to DataBindings package

--- a/Packages/DelphiXE/DataBindings.dproj
+++ b/Packages/DelphiXE/DataBindings.dproj
@@ -56,6 +56,8 @@
 			<DCCReference Include="DSharp.Core.dcp"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.Adapters.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
 			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.ObservableCollection.pas"/>
