--- a/Packages/Delphi2010/DataBindings.dproj
+++ b/Packages/Delphi2010/DataBindings.dproj
@@ -58,6 +58,8 @@
 			<DCCReference Include="DSharp.Core.dcp"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.Adapters.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
