- reduced dependency on DSharp.Bindings unit by moving property change notification related stuff to own unit

--- a/Packages/Delphi2010/DataBindings.dproj
+++ b/Packages/Delphi2010/DataBindings.dproj
@@ -60,6 +60,7 @@
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.Adapters.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Notifications.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
