--- a/Packages/DelphiXE2/DataBindings.dproj
+++ b/Packages/DelphiXE2/DataBindings.dproj
@@ -91,7 +91,9 @@
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.CollectionView.Adapters.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Exceptions.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Notifications.pas"/>
+			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
