--- a/Samples/Sample10.dproj
+++ b/Samples/Sample10.dproj
@@ -24,7 +24,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_UnitSearchPath>..\Source\Collections;..\Source\ComponentModel;..\Source\Core;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+			<DCC_UnitSearchPath>..\Source\Collections;..\Source\ComponentModel;..\Source\Core;..\..\DelphiSpring;..\..\DelphiSpring\Source\System;..\..\DelphiSpring\Source\System\Collections;..\..\DelphiSpring\Source\System\Reflection;..\..\DelphiSpring\Source\System\Utils;..\..\DelphiSpring\Source\Core\Container;..\..\DelphiSpring\Source\Core\Services;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_DcuOutput>.\$(Config)\$(Platform)</DCC_DcuOutput>
 			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
