--- a/Packages/Delphi2010/DSharp.Core.dproj
+++ b/Packages/Delphi2010/DSharp.Core.dproj
@@ -25,7 +25,7 @@
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
 			<DesignOnlyPackage>false</DesignOnlyPackage>
-			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\DSharp.Core.Delphi2010.bpl</DCC_DependencyCheckOutputName>
+			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\DSharp.Core.Delphi2010.bpl</DCC_DependencyCheckOutputName>
 			<DllSuffix>.Delphi2010</DllSuffix>
 			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
 			<DCC_Description>DSharp Core Library</DCC_Description>
@@ -68,17 +68,16 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lambda.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.Logging.Console.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
-			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyPath.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Reflection.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Threading.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Utils.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
+			<DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
+			<DCCReference Include="..\..\Source\Logging\DSharp.Logging.Console.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
