--- a/Packages/Delphi2010/DataBindings.dproj
+++ b/Packages/Delphi2010/DataBindings.dproj
@@ -65,6 +65,7 @@
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.ObservableCollection.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.PropertyChangedBase.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.XNode.pas"/>
 			<BuildConfiguration Include="Base">
