--- a/Packages/Delphi2010/TreeViewPresenter.dproj
+++ b/Packages/Delphi2010/TreeViewPresenter.dproj
@@ -25,7 +25,7 @@
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
 			<DesignOnlyPackage>false</DesignOnlyPackage>
-			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\TreeViewPresenter140.bpl</DCC_DependencyCheckOutputName>
+			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\TreeViewPresenter140.bpl</DCC_DependencyCheckOutputName>
 			<DllSuffix>140</DllSuffix>
 			<DCC_Description>DSharp treeview presenter runtime package</DCC_Description>
 			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
@@ -60,6 +60,7 @@
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.DataTemplate.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.RttiDataTemplate.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.XmlDataTemplate.pas"/>
+			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.CustomPresenter.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.TreeViewPresenter.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
