- preparations for cross platform support - moved CustomDraw from IDataTemplate to IControlTemplate to remove VCL dependency from Core package

--- a/Packages/Delphi2010/TreeViewPresenter.dproj
+++ b/Packages/Delphi2010/TreeViewPresenter.dproj
@@ -57,9 +57,10 @@
 			<DCCReference Include="rtl.dcp"/>
 			<DCCReference Include="vcl.dcp"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.pas"/>
-			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.DataTemplate.pas"/>
+			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.ControlTemplate.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.RttiDataTemplate.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ColumnDefinitions.XmlDataTemplate.pas"/>
+			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.ControlTemplates.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.CustomPresenter.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.TreeViewPresenter.pas"/>
 			<BuildConfiguration Include="Base">
