--- a/Packages/Delphi2010/dclTreeViewPresenter.dproj
+++ b/Packages/Delphi2010/dclTreeViewPresenter.dproj
@@ -5,9 +5,7 @@
 			<ProjectVersion>12.3</ProjectVersion>
 			<Base>True</Base>
 			<Config Condition="'$(Config)'==''">Debug</Config>
-			<Platform>Win32</Platform>
 			<AppType>Package</AppType>
-			<FrameworkType>VCL</FrameworkType>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
@@ -24,7 +22,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\dclTreeViewPresenter140.bpl</DCC_DependencyCheckOutputName>
+			<DCC_DependencyCheckOutputName>..\..\..\..\..\..\..\..\..\Public\Documents\RAD Studio\7.0\Bpl\dclTreeViewPresenter140.bpl</DCC_DependencyCheckOutputName>
 			<DllSuffix>140</DllSuffix>
 			<DesignOnlyPackage>true</DesignOnlyPackage>
 			<DCC_Description>DSharp treeview presenter designtime package</DCC_Description>
@@ -54,8 +52,7 @@
 			<DCCReference Include="..\..\Resources\DSharp.Windows.TreeViewPresenter.dcr"/>
 			<DCCReference Include="designide.dcp"/>
 			<DCCReference Include="TreeViewPresenter.dcp"/>
-			<DCCReference Include="rtl.dcp"/>
-			<DCCReference Include="vcl.dcp"/>
+			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.CustomPresenter.Designtime.pas"/>
 			<DCCReference Include="..\..\Source\Windows\DSharp.Windows.TreeViewPresenter.Designtime.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
@@ -102,9 +99,6 @@
 						<VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments"/>
 					</VersionInfoKeys>
-					<Excluded_Packages>
-						<Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\7.0\Bpl\DataBindings.bpl">File C:\Users\Public\Documents\RAD Studio\7.0\Bpl\DataBindings.bpl not found</Excluded_Packages>
-					</Excluded_Packages>
 					<Source>
 						<Source Name="MainSource">dclTreeViewPresenter.dpk</Source>
 					</Source>
@@ -114,9 +108,6 @@
 						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
 					</Parameters>
 				</Delphi.Personality>
-				<Platforms>
-					<Platform value="Win32">True</Platform>
-				</Platforms>
 			</BorlandProject>
 			<ProjectFileVersion>12</ProjectFileVersion>
 		</ProjectExtensions>
